--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: J.SON - Machine Learning Study Blog for Industry 4.0
-description: 
+title: J.SON - Machine Learning Study Blog
+description: A journey towards revolutionizing the manufacturing industry by implementing the state of the art machine learning technologies.
 github_username: JSON-KR
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "MLforIR4"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
-url: "https://JSON-KR.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://JSON-KR.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 ###########################################################
 #########  Special Instructions for baseurl ###############
